Testing Docker deploy to S3

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,17 @@ services:
     - docker
 
 before_install:
-  - docker build -t alcaamoti/react-app -f Dockerfile.dev .
+  - docker build -t alcaamoti/react-app -f Dockerfile .
 
 script:
   - docker run alcaamoti/react-app npm run test -- --coverage
+
+deploy:
+  provider: s3
+  access_key_id: $AWS_ACCESS_KEY
+  on: 
+    branch: master
+  secret_access_key: $AWS_SECRET_KEY
+  bucket: $S3_BUCKET
+  region: $AWS_REGION
+  local_dir: build
