--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "aws s3 sync build/ s3://static-serve-react-test --profile s3-deploy --region us-east-2",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
