Testing deployment with shell script

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ before_install:
 script:
   - docker run alcaamoti/react-app npm run test -- --coverage
 
-before_deploy:
+after_success:
   - docker build -t alcaamoti/react-app .
 
 deploy:
   provider: script
-  script: docker run $(printenv | grep -E '^AWS' | sed 's/AWS_/-e /g' | sed 's/-e /-e AWS_/g') alcaamoti/react-app
+  script: bash scripts/deploy-client.sh
   on:
     branch: master
 
