--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,14 @@ before_install:
 
 script:
   - docker run alcaamoti/react-app-dev npm run test -- --coverage
-  - docker build -t alcaamoti/react-app .
-  - bash scripts/deploy.sh
-#after_success:
-  
 
-# deploy:
-#   provider: script
-#   script: bash scripts/deploy.sh
-#   on:
-#     branch: master
+before_deploy:
+  - docker build -t alcaamoti/react-app .
+
+deploy:
+  provider: script
+  script: bash scripts/deploy.sh
+  on:
+    branch: master
 
 
