--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ sudo: required
 services:
     - docker
 
-# before_install:
-#   - docker build -t alcaamoti/react-app-dev -f Dockerfile.dev .
+before_install:
+  - docker build -t alcaamoti/react-app-dev -f Dockerfile.dev .
 
-# script:
-#   - docker run alcaamoti/react-app-dev npm run test -- --coverage
+script:
+  - docker run alcaamoti/react-app-dev npm run test -- --coverage
 
 before_deploy:
   - docker build -t alcaamoti/react-app .
